<resources>
    <string name="app_name">Farma Fast</string>

    <string name="correo">Correo</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="olvidaste_tu_contrasenia">¿Olvdaste tu contraseña?</string>
    <string name="registrate">Registrate</string>
    <string name="restablecer_contrasenia">Restablecer</string>

    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="registro_de_repartidor">Registro de repartidor</string>
    <string name="registro_de_establecimiento">Registro de establecimiento</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>

    <string name="registrarse_como_usuario">Registrarse como usuario</string>
    <string name="registrarse_como_repartidor">Registrarse como repartidor</string>
    <string name="registrarse_como_establecimiento">Registrarse como establecimiento</string>

    <string name="coordenadas_del_domicilio">Coordenadas del domicilio</string>
    <string name="coordenadas_del_establecimiento">Coordenadas del establecimiento</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="todo">todo</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar_sesion">Cerrar sesion</string>

    <string name="menu_usuario_inicio">Usuario inicio</string>
    <string name="menu_repartidor_inicio">Repartidor inicio</string>
    <string name="menu_establecimiento_inicio">Establecimiento inicio</string>
    <string name="menu_creditos">Creditos</string>
    <string name="menu_usuario_carrito">Carrito</string>
    <string name="title_activity_repartidor">RepartidorActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_pedido_actual">Pedido actual</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_establecimiento">EstablecimientoActivity</string>

    <string name="creditos">
        Instituto Tecnológico de Toluca\n\n
        Ingeniería en sistemas computacionales\n\n
        Desarrollo movil\n\n
        -Brito Rivera Mauricio\n
        -Burgos Gama Alan\n
        -González Albarrán Orlando\n\n
        M.C. Rocio Elizabreth Pulido Alba\n\n
        Lun Mier Vier 2020\n\n
        Version 1.0\n\n
    </string>

    <string name="datos">Datos</string>
    <string name="precio">Precio</string>
    <string name="lista_de_productos">Lista de productos</string>
    <string name="pedidos_disponibles">Pedidos disponibles</string>
    <string name="limpiar">Limpiar</string>
    <string name="nada"> </string>
    <string name="cantidad">Cantidad</string>
    <string name="comprar_ahora">Comprar ahora</string>

    <string name="ir_domicilio">Ir a Entregar</string>
    <string name="ir_establecimiento">Ir a Establecimiento</string>
    <string name="entrega_realizada">Entrega Realizada</string>

</resources>