<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietCorreoMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietContraseniaMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bIngresarMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ingresar" />
        <Button
            android:id="@+id/bRegistroUsuarioMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/registrarse_como_usuario" />
        <Button
            android:id="@+id/bRegistroRepartidorMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse_como_repartidor" />
        <Button
            android:id="@+id/bRegistroEstablecimientoMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse_como_establecimiento" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/olvidaste_tu_contrasenia"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/tvRestablecerContraseniaMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/restablecer_contrasenia"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>