<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_usuario_inicio"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_usuario_inicio" />
        <item
            android:id="@+id/nav_usuario_carrito"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_usuario_carrito" />
        <item
            android:id="@+id/nav_creditos"
            android:icon="@drawable/ic_baseline_perm_device_information_24"
            android:title="@string/menu_creditos" />
    </group>
</menu>