<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/tVInfoProductoDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/nada"/>
    <ImageView
        android:id="@+id/iVFotoDialog"
        android:layout_width="196dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_menu_gallery"
        android:contentDescription="@string/todo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/ibMenos_cantidad_Dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietCantidad_producto_Dialog"                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/ibMas_cantidad_Dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>


    </LinearLayout>

</ScrollView>
